force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Diameter_in__c.field-meta.xml
<CustomField>
    <fullName>AVO_Diameter_in__c</fullName>
    <label>Casing Diameter (in)</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>