force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Discovery_Date__c</fullName>
    <label>Discovery Date</label>
    <type>Date</type>
</CustomField>