force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Disinfected_Well__c.field-meta.xml
<CustomField>
    <fullName>avo_Disinfected_Well__c</fullName>
    <label>Disinfected Well?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>