force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Drillers_License_No__c.field-meta.xml
<CustomField>
    <fullName>AVO_Drillers_License_No__c</fullName>
    <label>Drillers License No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>