force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Drip__c.field-meta.xml
<CustomField>
    <fullName>AVO_Drip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drip</label>
    <type>Checkbox</type>
</CustomField>