force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Email__c.field-meta.xml
<CustomField>
    <fullName>AVO_Email__c</fullName>
    <label>Email</label>
    <length>5</length>
    <type>Text</type>
</CustomField>