force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Emitters__c.field-meta.xml
<CustomField>
    <fullName>AVO_Emitters__c</fullName>
    <label>Emitters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will use micro-sprinkler device part circle will be used</fullName>
            </value>
            <value>
                <fullName>Will use part micro-sprinkler device. Full circle will be used</fullName>
            </value>
            <value>
                <fullName>Will use non-pressure compensating point source emitters (emitter installed in the field after the tubing is installed)</fullName>
            </value>
            <value>
                <fullName>Will use pressure compensating point source emitters (emitter installed in the field after the tubing is installed)</fullName>
            </value>
            <value>
                <fullName>Will use line source emitters (emitter manufactured as integral part of tubing)</fullName>
            </value>
            <value>
                <fullName>​Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>