force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_End_Guns_Plan__c.field-meta.xml
<CustomField>
    <fullName>AVO_End_Guns_Plan__c</fullName>
    <label>End Guns Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No end gun will be installed on this system</fullName>
            </value>
            <value>
                <fullName>​Automated end gun shutoff will be installed</fullName>
            </value>
            <value>
                <fullName>The entire area under the end gun is cropland to be included in field operations; therefore, no automated end gun shutoff will be installed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>