force-app/main/default/objects/MUSW__Permit2__c/fields/Avo_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Avo_Estimated_Cost__c</fullName>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>