force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Evaluated_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Evaluated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>