force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Existing_AG_Water_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>avo_Existing_AG_Water_Permit_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Applicable</inlineHelpText>
    <label>Existing AG Water Permit Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>notEqual</operation>
            <value>Revision</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Permits (Existing AG Water Permit Number)</relationshipLabel>
    <relationshipName>PermitsywMu</relationshipName>
    <type>Lookup</type>
</CustomField>