force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Existing_Surface_Water_Pumps__c.field-meta.xml
<CustomField>
    <fullName>AVO_Existing_Surface_Water_Pumps__c</fullName>
    <inlineHelpText>Are there any existing surface water pumps on your pond?</inlineHelpText>
    <label>Existing Surface Water Pumps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>