force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Existing_Wells__c.field-meta.xml
<CustomField>
    <fullName>AVO_Existing_Wells__c</fullName>
    <inlineHelpText>Are there any existing wells pumping into the pond?</inlineHelpText>
    <label>Existing Wells</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>