force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Farm_Corp_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Farm_Corp_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farm/Corp Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Permits (Farm/Corp Name)</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>