force-app/main/default/objects/MUSW__Permit2__c/fields/Avo_Fee_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Avo_Fee_Calculation__c</fullName>
    <label>Fee Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimated Value</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>