force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_FIPS_Code2__c.field-meta.xml
<CustomField>
    <fullName>AVO_FIPS_Code2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIPS Code2</label>
    <referenceTo>AVO_County__c</referenceTo>
    <relationshipLabel>Permits</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>