force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>AVO_Fiscal_Quarter__c</fullName>
    <formula>&quot;FY &quot; &amp; TEXT(
    MOD(YEAR(DATEVALUE(CreatedDate)), 100)
) &amp; &quot;: Q&quot; &amp; TEXT(
    CASE(
        FLOOR((MONTH(DATEVALUE(CreatedDate)) - 1) / 3) + 1,
        1, 1,
        2, 2,
        3, 3,
        4, 4,
        0
    )
)</formula>
    <label>Fiscal Quarter</label>
    <type>Text</type>
</CustomField>