force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_FRBPCONZONE__c.field-meta.xml
<CustomField>
    <fullName>AVO_FRBPCONZONE__c</fullName>
    <label>FRBPCONZONE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>