force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Groundwater_Wells_MayBe_ReUsed_Ackn__c.field-meta.xml
<CustomField>
    <fullName>AVO_Groundwater_Wells_MayBe_ReUsed_Ackn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The groundwater well(s) is (are) capped and may be re-used in the future.</inlineHelpText>
    <label>Groundwater Wells MayBe Re-Used Ackn</label>
    <type>Checkbox</type>
</CustomField>