force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Groundwater_Wells_NotToBe_Used_Ackn__c.field-meta.xml
<CustomField>
    <fullName>AVO_Groundwater_Wells_NotToBe_Used_Ackn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The groundwater well(s) is (are) plugged and abandoned and is (are) not to be used.</inlineHelpText>
    <label>Groundwater Wells NotToBe Used Ackn</label>
    <type>Checkbox</type>
</CustomField>