force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Gun__c.field-meta.xml
<CustomField>
    <fullName>AVO_Gun__c</fullName>
    <label>Gun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18-degree trajectory (Full circle) gun(s)</fullName>
            </value>
            <value>
                <fullName>18-degree trajectory (Part circle) gun(s)</fullName>
            </value>
            <value>
                <fullName>27-degree trajectory (Full circle) gun(s)</fullName>
            </value>
            <value>
                <fullName>27-degree trajectory (Part circle) gun(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>