force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Gun_other_trajectory__c.field-meta.xml
<CustomField>
    <fullName>AVO_Gun_other_trajectory__c</fullName>
    <label>Describe Other Gun Trajectory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>