force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_GW_Withdrawal_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_GW_Withdrawal_Applied_Date__c</fullName>
    <label>GW Withdrawal Applied Date</label>
    <type>Date</type>
</CustomField>