force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Historic_Counter__c.field-meta.xml
<CustomField>
    <fullName>AVO_Historic_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Keeps track of how many times the permit has been edited, to append the number to the end of the historic permit name made after editing the permit.</description>
    <label>Historic Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>