force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>AVO_Home_Phone__c</fullName>
    <label>Home Phone</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>