force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Hours_Before_Stabilizatioin__c.field-meta.xml
<CustomField>
    <fullName>avo_Hours_Before_Stabilizatioin__c</fullName>
    <label>Hours Before Stabilizatioin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>