force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_How_many_surface_acres_in_your_pond__c.field-meta.xml
<CustomField>
    <fullName>AVO_How_many_surface_acres_in_your_pond__c</fullName>
    <inlineHelpText>(acres)</inlineHelpText>
    <label>How many surface acres in your pond?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>