force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_How_many_wells__c.field-meta.xml
<CustomField>
    <fullName>AVO_How_many_wells__c</fullName>
    <label>How many wells?</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>