force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_How_Pump_is_Filled__c.field-meta.xml
<CustomField>
    <fullName>AVO_How_Pump_is_Filled__c</fullName>
    <label>How Pump is Filled</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perennial or intermittent stream</fullName>
            </value>
            <value>
                <fullName>Rainfall Runoff</fullName>
            </value>
            <value>
                <fullName>Pumped water from stream or pond</fullName>
            </value>
            <value>
                <fullName>Springs &amp; Seeps</fullName>
            </value>
            <value>
                <fullName>Pumped water from well</fullName>
            </value>
            <value>
                <fullName>Sinkhole or natural pond/wetland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>