force-app/main/default/objects/MUSW__Permit2__c/fields/avo_If_Air_Line_Installed_Air_Line_Depth__c.field-meta.xml
<CustomField>
    <fullName>avo_If_Air_Line_Installed_Air_Line_Depth__c</fullName>
    <inlineHelpText>(ft.)</inlineHelpText>
    <label>If Air Line Installed, Air Line Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>