force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_If_Yes_how_many_wells__c.field-meta.xml
<CustomField>
    <fullName>AVO_If_Yes_how_many_wells__c</fullName>
    <label>If Yes, how many?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>