force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inactive_Reason__c</fullName>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_Inactive_Reason</valueSetName>
    </valueSet>
</CustomField>