force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Inside_X__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inside_X__c</fullName>
    <label>Inside_X</label>
    <length>16</length>
    <type>Text</type>
</CustomField>