force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>avo_Installation_Type__c</fullName>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>