force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Installed_Date__c</fullName>
    <label>Irrigation Installed Date</label>
    <type>Date</type>
</CustomField>