force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Installer_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Installer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Permits1</relationshipName>
    <type>Lookup</type>
</CustomField>