force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_InstallerID__c.field-meta.xml
<CustomField>
    <fullName>AVO_InstallerID__c</fullName>
    <label>Well Contractor/Driller Contact ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>