force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Irrigated_Acres_under_2_5__c.field-meta.xml
<CustomField>
    <fullName>AVO_Irrigated_Acres_under_2_5__c</fullName>
    <label>Irrigated Acres under #2-5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>