force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Irrigation_Efficiency_Form_required__c.field-meta.xml
<CustomField>
    <fullName>AVO_Irrigation_Efficiency_Form_required__c</fullName>
    <label>Irr Eff Form On File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>