force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Irrigation_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Irrigation_Type__c</fullName>
    <label>Irrigation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Center Pivot</fullName>
            </value>
            <value>
                <fullName>Center Pivot and Drip</fullName>
            </value>
            <value>
                <fullName>Center Pivot and solid Set Sprinkler</fullName>
            </value>
            <value>
                <fullName>Center Pivot and Traveler</fullName>
            </value>
            <value>
                <fullName>Drip</fullName>
            </value>
            <value>
                <fullName>Drip and Solid Set Sprinkler</fullName>
            </value>
            <value>
                <fullName>Drip and Traveler</fullName>
            </value>
            <value>
                <fullName>Dump Well</fullName>
            </value>
            <value>
                <fullName>Non-Irrigation</fullName>
            </value>
            <value>
                <fullName>Solid set Sprinkler</fullName>
            </value>
            <value>
                <fullName>Traveler</fullName>
            </value>
            <value>
                <fullName>Traveler and Solid Set sprinkler</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>