force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_IrrStatus__c.field-meta.xml
<CustomField>
    <fullName>AVO_IrrStatus__c</fullName>
    <label>IrrStatus</label>
    <length>16</length>
    <type>Text</type>
</CustomField>