force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_IrrSys__c.field-meta.xml
<CustomField>
    <fullName>AVO_IrrSys__c</fullName>
    <label>IrrSys</label>
    <length>16</length>
    <type>Text</type>
</CustomField>