force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Is_Conservation_Plan_required__c.field-meta.xml
<CustomField>
    <fullName>AVO_Is_Conservation_Plan_required__c</fullName>
    <label>Water Cons Plan on File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>