force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Is_the_Water_Level_Stabilized__c.field-meta.xml
<CustomField>
    <fullName>avo_Is_the_Water_Level_Stabilized__c</fullName>
    <label>Is the Water Level Stabilized?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>