force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_LandUse__c.field-meta.xml
<CustomField>
    <fullName>AVO_LandUse__c</fullName>
    <label>LandUse</label>
    <length>16</length>
    <type>Text</type>
</CustomField>