force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Last_Permit_TR_UP__c.field-meta.xml
<CustomField>
    <fullName>AVO_Last_Permit_TR_UP__c</fullName>
    <label>Last Permit TR UP</label>
    <type>Date</type>
</CustomField>