force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Latitude_Well__c.field-meta.xml
<CustomField>
    <fullName>AVO_Latitude_Well__c</fullName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>