force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Lead_Zero__c.field-meta.xml
<CustomField>
    <fullName>AVO_Lead_Zero__c</fullName>
    <label>Lead Zero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>