force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Leak_detcton_and_operational_checks__c.field-meta.xml
<CustomField>
    <fullName>AVO_Leak_detcton_and_operational_checks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Leak detection and operational checks: Leak repair and maintenance of proper design system operating pressure are considered standard BMP’s. *Required for all new and modified Flint River Basin farm-use permits. (Refer to “Map A” on page 11)</inlineHelpText>
    <label>Leak detection and operational checks</label>
    <type>Checkbox</type>
</CustomField>