force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_LegacyID_c__c.field-meta.xml
<CustomField>
    <fullName>AVO_LegacyID_c__c</fullName>
    <label>LegacyID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>