force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Letter_of_Concurrence_Expiration__c.field-meta.xml
<CustomField>
    <fullName>AVO_Letter_of_Concurrence_Expiration__c</fullName>
    <formula>AVO_Letter_of_Concurrence_Issuance__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter of Concurrence Expiration</label>
    <type>Date</type>
</CustomField>