force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Letter_of_Concurrence_Issuance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Letter_of_Concurrence_Issuance__c</fullName>
    <label>Letter of Concurrence Issuance</label>
    <type>Date</type>
</CustomField>