force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Lithology__c.field-meta.xml
<CustomField>
    <fullName>AVO_Lithology__c</fullName>
    <label>Lithology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>