force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_LOC_Expiring_Within_90_Days__c.field-meta.xml
<CustomField>
    <fullName>AVO_LOC_Expiring_Within_90_Days__c</fullName>
    <formula>(TODAY() &gt;= (AVO_Letter_of_Concurrence_Expiration__c - 90)) &amp;&amp; (TODAY() &lt;= (AVO_Letter_of_Concurrence_Expiration__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOC Expiring Within 90 Days</label>
    <type>Checkbox</type>
</CustomField>