force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Location__c.field-meta.xml
<CustomField>
    <fullName>AVO_Location__c</fullName>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>