force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Longitude_Permit_Ownership__c.field-meta.xml
<CustomField>
    <fullName>AVO_Longitude_Permit_Ownership__c</fullName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>