force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Low_Pressure_Acres__c.field-meta.xml
<CustomField>
    <fullName>AVO_Low_Pressure_Acres__c</fullName>
    <label>Low Pressure Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>