force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Low_pressure_System__c.field-meta.xml
<CustomField>
    <fullName>AVO_Low_pressure_System__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Low pressure or plan to convert to low pressure in accordance with compliance dates established in the Flint River Basin Drought Protection Act (If your system does not use low pressure, then you must complete Section 2, UNLESS you indicate below that you land apply effluent.</inlineHelpText>
    <label>Low pressure System</label>
    <type>Checkbox</type>
</CustomField>