force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>AVO_Mailing_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Mailing Address</label>
    <referenceTo>MUSW__Address__c</referenceTo>
    <relationshipLabel>Permits (Mailing Address)</relationshipLabel>
    <relationshipName>Permits1</relationshipName>
    <type>Lookup</type>
</CustomField>