force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Max_Proposed_Permitted_Acres__c.field-meta.xml
<CustomField>
    <fullName>AVO_Max_Proposed_Permitted_Acres__c</fullName>
    <inlineHelpText>Proposed maximum number of permitted acres irrigated from this system</inlineHelpText>
    <label>Max. Proposed Permitted Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>